button not showing bug

--- a/public/videostyle.css
+++ b/public/videostyle.css
@@ -225,9 +225,7 @@ h3 {
   .users {
     margin-right: 4px;
   }
-  .invite-btn {
-    width: 31px;
-  }
+
   .sheild {
     display: none;
   }
